--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header">
         <nav>
-            <a>Luke Cosentino<br>UX Desginer</a>
+            <a>Luke Cosentino<br>UX Designer</a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -32,7 +32,7 @@
         <div class="text-box">
             <img src="images/AboutMe.png"></a>
             <h1>UX DESIGNER ADVOCATING <br> FOR USER NEEDS</h1>
-            <p>Hey! I’m Luke, a User Experience Designer keen to put my recent Monash University UX/UI Bootcamp knowledge to work. I’m driven to effectively research, analyse and design experiences that spark joy.</p>
+            <p>Hey! I’m Luke, a User Experience Designer keen to put my recent Monash University UX/UI Bootcamp knowledge to work. <br> I’m driven to effectively research, analyse and design experiences that spark joy.</p>
             <a href="" class="hero-btn">Contact me</a>
             <a href="" class="hero-btn">Resume</a>
         </div>
@@ -65,8 +65,9 @@
 
 
         <section class="skills">
-            <h2>MY SKILLS</h2>
-            <p>Luke is capable of designing wireframes, prototyping, using design systems and creating components in Figma. Mood boarding and creating sketch prototypes utilizing InVision and taking advantage of Miro for it’s collaborative capabilities. He practices great design hygiene and file management through proper naming conventions and keeping a clean and tidy Google Drive. Additional experience in using GitHub and VS code with knowledge of HTML and CSS. Helping to make considered design choices in regards to tech capabilities while allowing for more effective communication with developers.</p>
+            <h2>SKILLS</h2>
+            <p>Luke is capable of designing wireframes, prototyping, using design systems and creating components in Figma. Mood boarding and creating sketch prototypes utilizing InVision and taking advantage of Miro for it’s collaborative capabilities. He practices great design hygiene and file management through proper naming conventions and keeping a clean and tidy Google Drive.</p>
+            <p>Additional experience in using GitHub and VS code with knowledge of HTML and CSS. Helping to make considered design choices in regards to tech capabilities while allowing for more effective communication with developers.</p>
             <div class="skills-row">
                 <div class="skills-col">
                     <img src="images/SkillsLogos.png">
