Update to Footer

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
     </div>
 
+    </section>
 
         <section class="skills">
             <h2>SKILLS</h2>
@@ -119,7 +120,7 @@
         </section>
         
         <section class="footer">
-            <div class="nav-links" id="navLinks">
+            <div class="footer-links">
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -127,7 +128,7 @@
                     <li><a href="">SKILLS</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
-
+            </div>
         </section>
 
     </section>
