Added Head Start Homes page
Added a new page via an extra .html file while utilizing the existing .CSS to contain the style.

First pass - will be adding further imagery and design in future.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
-                    <li><a href="">WORK</a></li>
-                    <li><a href="">SKILLS</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="#work">WORK</a></li>
+                    <li><a href="#skills">SKILLS</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -33,23 +33,25 @@
             <img src="images/AboutMe.png"></a>
             <h1>UX DESIGNER ADVOCATING <br> FOR USER NEEDS</h1>
             <p>Hey! I’m Luke, a User Experience Designer keen to put my recent Monash University UX/UI Bootcamp knowledge to work. <br> I’m driven to effectively research, analyse and design experiences that spark joy.</p>
-            <a href="" class="hero-btn">Contact me</a>
-            <a href="" class="hero-btn">Resume</a>
+            <a href="#contact" class="hero-btn">Contact me</a>
+            <a href="#contact" class="hero-btn">Resume</a>
         </div>
     </section>
         
     <!-------Projects------>
 
     <section class="caseStudies">
+        <a id="work"></a>
         <h2>WORK</h2>
         <p>My Latest Projects</p>
 
         <div class="column">
+        <a href="projects.html"><link>
             <div class="caseStudy-col1">
                 <img src="images/HeadStartHomes-Mobile.png">
                 <h3>Head Start Homes</h3>
                 <p>Redesigning a non-profit organization to increase credibility and transparency, informed by user testing insights and stakeholder consultations.<br>Personal contributions were in user research/analysis, Lo-Fi wireframing and presenting.</p>
-            </div>
+            </a></div>
             <div class="caseStudy-col2">
                 <img src="images/DepartmentOfEducation-Mobile.png">
                 <h3>Department of Education</h3>
@@ -66,6 +68,7 @@
     </section>
 
         <section class="skills">
+            <a id="skills"></a>
             <h2>SKILLS</h2>
             <p>Luke is capable of designing wireframes, prototyping, using design systems and creating components in Figma. Mood boarding and creating sketch prototypes utilizing InVision and taking advantage of Miro for it’s collaborative capabilities. He practices great design hygiene and file management through proper naming conventions and keeping a clean and tidy Google Drive.</p>
             <p>Additional experience in using GitHub and VS code with knowledge of HTML and CSS. Helping to make considered design choices in regards to tech capabilities while allowing for more effective communication with developers.</p>
@@ -109,12 +112,13 @@
 
         <section>
             <div class="contact-me">
+                <a id="contact"></a>
                 <h2>CONTACT ME</h2>
                 <p>I’d love to hear from you to discuss any UX/UI design work I can provide <br> or to talk further regarding my previous studieds and experience.</p>
                 <h1>REACH ME HERE:</h1>
                 <p>(+61)478-417-015 <br> lukecose7483@gmail.com</p>
-                <a href="" class="hero-btn">Contact me</a>
-                <a href="" class="hero-btn">Resume</a>
+                <a href="#contact" class="hero-btn">Contact me</a>
+                <a href="#contact" class="hero-btn">Resume</a>
             </div>
 
         </section>
