--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,18 @@
 
      </section>
 
+    <div class="grid-container2">
+        <div class="problem">
+            <h2>The Problem</h2>
+            <p>The current Head Start Homes website features some design pain points leading to credibility issues in addition to a poor flow of information on its homepage. This is likely turning away potential donors from donating and engaging with the homepage content.</p>
+        </div>
+        <div class="solution">
+            <h2>The Solution</h2>
+            <p>Our team has redesigned the homepage information hierarchy based on usability testing and connecting with our StakeHolder, Stephen Woodlands, the founder of Head Start Homes. We Focused on creating a trustworthy aesthetic for the site encouraging donors to help fund the cause but more importantly developing a clear and visual way of communicating what the non-profit does to help the homeless community.</p>
+        </div>
+
+    </div>
+
      <h1 class="case-study-heading">THE PROCESS</h1>
 
     <section class="Step-1">
